tests/negative/threadpool_zero_workers.far
fun main() -> i64 {
  p = ThreadPool(0)
  return 0
}
